// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NetworkingSetting should match snapshot in empty state 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex w-full flex-row justify-between"
      >
        <div>
          <h1
            class="text-neutral text-2xl font-bold mb-2"
          >
            Networking
          </h1>
          <p
            class="mb-2 text-sm text-neutral-350"
          >
            You can expose publicly over HTTP/gRPC the Kubernetes services deployed.
          </p>
          <span
            aria-controls="radix-:r6:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="mb-5 cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert gap-2"
        >
          Add port
          <i
            aria-hidden="true"
            class="fa-regular fa-plus-circle "
          />
        </button>
      </div>
      <form
        class="w-full"
      >
        <div
          class="mb-5 rounded border border-neutral bg-surface-neutral-subtle w-full"
          data-testid="block-content"
        >
          <div
            class="flex h-9 items-center justify-between border-b border-neutral px-4"
          >
            <h2
              class="text-ssm font-medium text-neutral"
            >
              Services exposed publicly
            </h2>
          </div>
          <div
            class="p-0"
          >
            <div
              class="my-4 px-10 py-5 text-center"
            >
              <i
                aria-hidden="true"
                class="fa-regular fa-wave-pulse text-neutral-300"
              />
              <p
                class="mb-3 mt-1 text-xs font-medium text-neutral-350"
              >
                No port are set.
              </p>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;

exports[`NetworkingSetting should match snapshot with ports 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex w-full flex-row justify-between"
      >
        <div>
          <h1
            class="text-neutral text-2xl font-bold mb-2"
          >
            Networking
          </h1>
          <p
            class="mb-2 text-sm text-neutral-350"
          >
            You can expose publicly over HTTP/gRPC the Kubernetes services deployed.
          </p>
          <span
            aria-controls="radix-:rd:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="mb-5 cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert gap-2"
        >
          Add port
          <i
            aria-hidden="true"
            class="fa-regular fa-plus-circle "
          />
        </button>
      </div>
      <form
        class="w-full"
      >
        <div
          class="mb-5 rounded border border-neutral bg-surface-neutral-subtle w-full"
          data-testid="block-content"
        >
          <div
            class="flex h-9 items-center justify-between border-b border-neutral px-4"
          >
            <h2
              class="text-ssm font-medium text-neutral"
            >
              Services exposed publicly
            </h2>
          </div>
          <div
            class="p-0"
          >
            <div
              class="flex w-full items-center justify-between gap-3 border-b border-neutral-250 px-5 py-4 last:border-0"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium text-neutral-400"
                >
                  My service
                </span>
                <div
                  class="flex flex-row gap-2 text-xs text-neutral-350"
                >
                  <span>
                    Service port: 
                    1234
                  </span>
                  <span>
                    Protocol: 
                    HTTP
                  </span>
                  <span>
                    Namespace: 
                    My namespace
                  </span>
                </div>
              </div>
              <div
                class="flex gap-2"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
                  data-testid="edit-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-gear "
                  />
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
                  data-testid="remove-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-trash "
                  />
                </button>
              </div>
            </div>
            <div
              class="flex w-full items-center justify-between gap-3 border-b border-neutral-250 px-5 py-4 last:border-0"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium text-neutral-400"
                >
                  My service 2
                </span>
                <div
                  class="flex flex-row gap-2 text-xs text-neutral-350"
                >
                  <span>
                    Service port: 
                    4321
                  </span>
                  <span>
                    Protocol: 
                    GRPC
                  </span>
                </div>
              </div>
              <div
                class="flex gap-2"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
                  data-testid="edit-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-gear "
                  />
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
                  data-testid="remove-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-trash "
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;
